fix z-index for live site

--- a/sites/all/themes/baddercamp/css/navigation.css
+++ b/sites/all/themes/baddercamp/css/navigation.css
@@ -28,6 +28,7 @@ li a.active {
   padding: 5px 0;
 }
 #navigation #block-dynamic_persistent_menu-0 {
+  position: relative;
   z-index: 100;
 }
 #navigation ul.nice-menu,
